# pokeserver

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  mod.rs
src/adapters/: app.rs  mod.rs
src/adapters/services/: items.rs  storage.rs
src/controllers/: dto.rs  handlers.rs  http.rs  mod.rs  routes.rs  spec.rs
src/core/: mod.rs  str.rs
src/core/domain/: attack.rs  balance.rs  battle.rs  elements.rs  fighter.rs  pokemon.rs  report.rs
src/core/ports/: app.rs  services.rs
